--- a/src/scss/components/hero.scss
+++ b/src/scss/components/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url("../../../public/assets/hero/image49.png");
+  background-image: url("./public/assets/hero/image49.png");
 }
 
 .hero-title {
