--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -201,7 +201,7 @@ a:hover {
 }
 
 .hero {
-  background-image: url("./public/assets/hero/image49.png");
+  background-image: url("../../public/assets/hero/image49.png");
 }
 
 .hero-title {
@@ -553,7 +553,7 @@ a:hover {
   }
 }
 .featured {
-  background-image: url("./public/assets/featured/image 283.png");
+  background-image: url("../../public/assets/featured/image 283.png");
 }
 
 .featured-container {
