--- a/src/scss/components/featured.scss
+++ b/src/scss/components/featured.scss
@@ -1,5 +1,5 @@
 .featured {
-  background-image: url("./public/assets/featured/image\ 283.png");
+  background-image: url("../../public/assets/featured/image\ 283.png");
 }
 
 .featured-container {
