--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,5 @@
 @import "./components/testimonials.scss";
 @import "./components/cl-container.scss";
 @import "./components/foooter.scss";
+@import "./components/allproduct.scss";
+@import "./components/productdetail.scss";
