--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *,
 *:before,
 *:after {
@@ -12,7 +13,6 @@ body {
   color: #000;
   font-family: "Be Vietnam Pro", sans-serif;
   font-weight: 400;
-  line-height: 1;
 }
 
 h1,
@@ -59,10 +59,6 @@ a:hover {
   padding-bottom: 28px;
 }
 
-.row:last-child .col {
-  padding-bottom: 0;
-}
-
 @media (max-width: 572px) {
   .col {
     width: calc(var(--col-md) / 12 * 100%);
@@ -96,6 +92,10 @@ a:hover {
 
 .header-logo {
   padding: 0 32px;
+}
+
+.header-logo img {
+  mix-blend-mode: difference;
 }
 
 .nav {
@@ -266,10 +266,6 @@ a:hover {
   padding-bottom: 28px;
 }
 
-.row:last-child .col {
-  padding-bottom: 0;
-}
-
 @media (max-width: 572px) {
   .col {
     width: calc(var(--col-md) / 12 * 100%);
@@ -431,10 +427,6 @@ a:hover {
   padding-left: 14px;
   padding-right: 14px;
   padding-bottom: 28px;
-}
-
-.row:last-child .col {
-  padding-bottom: 0;
 }
 
 @media (max-width: 572px) {
@@ -1136,6 +1128,609 @@ footer {
   .footer-bottom {
     padding: 0 22px;
   }
+}
+.product-hero {
+  background-image: url("../../public/assets/product-page/hero/Change-IMG.png");
+  aspect-ratio: 1920/512;
+}
+
+.product-hero__title {
+  text-align: start;
+  width: 100%;
+  height: auto;
+}
+
+.product-hero__title h1 {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  color: #fff;
+  font-family: "be vietnam pro";
+  font-size: clamp(5px, 9.5vw, 100px);
+  font-style: normal;
+  font-weight: 600;
+  line-height: clamp(5px, 5vw, 104px);
+  letter-spacing: clamp(-1px, -1vw, -6px);
+  letter-spacing: -6px;
+  padding: 64px 164px;
+}
+
+@media (max-width: 576px) {
+  .product-hero {
+    aspect-ratio: 375/437;
+  }
+  .product-hero__title {
+    text-align: left;
+    width: 100%;
+    height: auto;
+  }
+  .product-hero__title h1 {
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 52px;
+    letter-spacing: -3px;
+    padding: 26px 21px;
+  }
+}
+.cate-container {
+  padding: 24px 0;
+}
+
+.cate-title {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  padding: 16px 0;
+}
+
+.cate-title h2 {
+  color: #1e1e1e;
+  font-family: "be vietnam pro";
+  font-size: 31px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%; /* 37.2px */
+  letter-spacing: -0.93px;
+  padding: 12px 0;
+}
+
+.cate-title h3 {
+  color: #1e1e1e;
+  font-family: "be vietnam pro";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  opacity: 0.8;
+  line-height: 142%;
+  max-width: 377px;
+}
+
+.cate-body {
+  display: flex;
+  position: relative;
+  width: 100%;
+}
+
+.cate__items {
+  display: flex;
+  align-items: center;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  width: 100%;
+  gap: 14px;
+  position: relative;
+  z-index: 1;
+}
+
+.cate__item {
+  display: flex;
+  gap: 7px;
+  align-items: center;
+  width: auto;
+  min-height: 108px;
+  width: 100%;
+  padding: 15px 0;
+  border-radius: 8px;
+  border: 1px solid #848484;
+  background: #f7f7f8;
+}
+
+.cate__item img {
+  max-height: 78px;
+  padding: 0 13px;
+  object-fit: cover;
+}
+
+.cate__item h4 {
+  font-family: "be vietnam pro";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142%;
+}
+
+.cate__controls {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 14px;
+  z-index: 10;
+  width: 339px;
+  height: 108px;
+  background: linear-gradient(270deg, #fff 78.28%, rgba(255, 255, 255, 0) 100%);
+  transform: translateX(70vw);
+}
+
+.cate__button {
+  overflow: hidden;
+  width: 35px;
+  height: 35px;
+  background: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+@media (max-width: 576px) {
+  .category {
+    display: none;
+  }
+}
+.filter-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 24px 0;
+}
+
+.filter-left,
+.filter-right {
+  display: flex;
+  align-items: center;
+}
+
+.filter-left:hover {
+  cursor: pointer;
+}
+
+.filter-left__text {
+  text-align: center;
+  font-family: "be vietnam pro";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142%;
+}
+
+.filter__sort {
+  font-family: "be vietnam pro";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142%;
+  opacity: 0.5;
+}
+
+.filter__select {
+  height: 100%;
+  padding: 0px 5px;
+  font-size: 15px;
+  border: none;
+  appearance: auto;
+  background-color: white;
+  cursor: pointer;
+  outline: none;
+}
+
+.filter__select option {
+  color: #1e1e1e;
+  text-align: center;
+  font-family: "be vietnam pro";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142%;
+  align-items: flex-start;
+}
+
+@media (max-width: 576px) {
+  .filter-right {
+    display: none;
+  }
+  .filter-container {
+    max-width: calc(100vw - 42px);
+    margin: auto;
+  }
+}
+.pagination {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 32px;
+  padding: 0px 0px 32px;
+  position: relative;
+}
+
+.pagination .divider {
+  position: relative;
+  width: 1776px;
+  height: 1px;
+  margin-left: -92px;
+  margin-right: -92px;
+}
+
+.pagination .div {
+  display: inline-flex;
+  align-items: flex-start;
+  gap: 4px;
+  position: relative;
+  flex: 0 0 auto;
+}
+
+.pagination .previous-button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  padding: 8px;
+  position: relative;
+  flex: 0 0 auto;
+  border-radius: 8px;
+  opacity: 0.2;
+}
+
+.pagination .background {
+  opacity: 0.1;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 0;
+  left: 0;
+  border-radius: 8px;
+}
+
+.pagination .img {
+  position: relative;
+  width: 24px;
+  height: 24px;
+}
+
+.pagination .item {
+  display: inline-flex;
+  align-items: flex-start;
+  position: relative;
+  flex: 0 0 auto;
+}
+
+.pagination .master {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  border-radius: 8px;
+}
+
+.pagination .background-2 {
+  background-color: rgb(15, 97, 255);
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 0;
+  left: 0;
+  border-radius: 8px;
+}
+
+.pagination .div-2 {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 0;
+  left: 0;
+  border-radius: 8px;
+}
+
+.pagination .label {
+  position: relative;
+  width: fit-content;
+  font-family: "be vietnam pro";
+  font-weight: 400;
+  font-size: 15px;
+  text-align: center;
+  color: white;
+  line-height: 142%;
+  white-space: nowrap;
+  font-style: normal;
+}
+
+.pagination .text-wrapper {
+  color: #0f61ff;
+  position: relative;
+  width: fit-content;
+  font-family: "be vietnam pro";
+  font-weight: 400;
+  font-size: 15px;
+  text-align: center;
+  line-height: 142%; /* 21.3px */
+  white-space: nowrap;
+  font-style: normal;
+}
+
+.pagination .previous-button-2 {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  padding: 8px;
+  position: relative;
+  flex: 0 0 auto;
+  border-radius: 8px;
+}
+
+@media (max-width: 576px) {
+  .pl-container {
+    max-width: calc(100vw - 42px);
+    margin: auto;
+  }
+  .col:nth-child(n+7) {
+    display: none;
+  }
+}
+.frame,
+.frame-wrapper,
+.frame__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.frame {
+  border-radius: 10px;
+  height: 100%;
+  width: 100%;
+  background-color: #f7f7f8;
+}
+
+.frame-wrapper {
+  padding: 43px 28px 49px 28px;
+}
+
+.frame__title {
+  color: var(--Text, #000);
+  text-align: center;
+  font-family: var(--Body-font-family, "be vietnam pro");
+  font-size: var(--Body-font-size-body-Md, 16px);
+  font-style: normal;
+  font-weight: 500;
+  line-height: 140%; /* 22.4px */
+  letter-spacing: -0.16px;
+}
+
+.frame__description {
+  align-self: stretch;
+  color: #000;
+  text-align: center;
+  font-family: "be vietnam pro";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 145%; /* 23.2px */
+  letter-spacing: -0.16px;
+  opacity: 0.5;
+}
+
+@media (max-width: 576px) {
+  .frame-sect {
+    display: none;
+  }
+}
+.search-sect {
+  display: none;
+}
+
+@media (max-width: 576px) {
+  .search-sect {
+    display: flex;
+    background: var(--Background, #f6f6f6);
+  }
+  .search-container {
+    max-width: calc(100vw - 42px);
+    margin: auto;
+    padding: 51px 0;
+  }
+  .search__title {
+    color: rgba(0, 0, 0, 0.5);
+    font-family: "be vietnam pro";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 145%; /* 23.2px */
+    letter-spacing: -0.16px;
+  }
+  .search-input {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px 0;
+    border-bottom: 1px solid var(--Border, #b8b8b8);
+    opacity: 0.4;
+  }
+  .search__text {
+    border: none;
+    outline: none;
+    padding: 10px 15px;
+    height: 45px;
+    font-size: 16px;
+    font-family: "Be Vietnam Pro", sans-serif;
+    color: #333;
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .search__text::placeholder {
+    overflow: hidden;
+    color: var(--Text, #1e1e1e);
+    text-overflow: ellipsis;
+    font-family: Inter;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%;
+    letter-spacing: -1.4px;
+    opacity: 0.4;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+    width: 100%;
+  }
+  /* Hiệu ứng focus */
+  .search__text:focus {
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  }
+}
+.pi-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  padding: 55px 0 64px 0;
+}
+
+.pi-cont__imgs {
+  flex: 57.6%;
+}
+
+.pi-cont__info {
+  flex: 42.4%;
+  background-color: lightblue; /* Chỉ để hiển thị rõ layout */
+}
+
+.pi-cont__imgs,
+.pi-cont__img,
+.pi-cont__thumbnails,
+.pi-cont__info {
+  width: 100%;
+  height: 100%;
+}
+
+.pi-thumbnails {
+  display: flex;
+  gap: 12px;
+}
+
+.pi-thumnail {
+  width: 107px;
+  height: 107px;
+  border-radius: 10px;
+  background: #d9d9d9;
+}
+
+.pi-thumnail:hover {
+  cursor: pointer;
+}
+
+.pi-wrapper {
+  width: 100%;
+  height: 100%;
+  padding: 80px 0 72px 80px;
+}
+
+.pi-main {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.pi-text {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.pi-main__subtitle {
+  font-family: Poppins;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142%;
+  opacity: 0.5;
+}
+
+.pi-main__title {
+  font-family: var(--Heading-font-family, "be vietnam pro");
+  font-size: var(--Heading-font-size-H4, 50px);
+  font-style: normal;
+  font-weight: 600;
+  line-height: 104%; /* 52px */
+  letter-spacing: -2.5px;
+}
+
+.pi-main__desc {
+  max-width: 473px;
+  color: var(--Text, #1e1e1e);
+  font-family: var(--Body-font-family, "be vietnam pro");
+  font-size: var(--Body-font-size-body-Sm, 15px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 142%;
+  opacity: 0.7;
+}
+
+.pi-main__price {
+  display: flex;
+  gap: 4px;
+}
+
+.pi-main__price-value--new {
+  color: var(--Text, #1e1e1e);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: bold;
+  font-weight: 500;
+  line-height: 105%;
+  letter-spacing: -0.2px;
+}
+
+.pi-main__price-value--old {
+  color: var(--Text, #1e1e1e);
+  font-family: "Be Vietnam Pro";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 142.857% */
+  opacity: 0.6;
+  text-decoration: line-through;
+  color: gray;
+  opacity: 0.7;
+}
+
+.pi-select label {
+  color: var(--Text, #1e1e1e);
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 140%;
+  opacity: 0.5;
+}
+
+.device-select__options {
+  display: flex;
+  gap: 6px;
+}
+
+.device-select__option select {
+  padding: 16px 14px;
+  border-radius: 12px;
+  border: 1px solid var(--Others-Line-1, #e3e5e8);
 }
 
 /*# sourceMappingURL=main.css.map */
