--- a/src/scss/base/reset.scss
+++ b/src/scss/base/reset.scss
@@ -12,7 +12,7 @@ body {
   color: #000;
   font-family: "Be Vietnam Pro", sans-serif;
   font-weight: 400;
-  line-height: 1;
+  // line-height: 1;
 }
 
 h1,
