--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -57,6 +57,12 @@
   line-height: 20px;
   padding: 25px 0;
   overflow: hidden;
+  color: #000;
+  font-family: "Be Vietnam Pro";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 .nav-list--text {
