--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -3,7 +3,7 @@
   height: 100%;
 }
 
-.bg-image {
+.page-section--img {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -18,10 +18,22 @@
   background-color: #f6f6f6;
 }
 .container-xxl {
+  // display: block;
   max-width: 1592px;
   margin: auto;
 }
 
+@media (max-width: 1592px) {
+  .container-xxl {
+    max-width: 1200px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .container-xxl {
+    max-width: 768px;
+  }
+}
 // .container-xs {
 //   max-width: 572px;
 //   margin: auto;
