--- a/src/scss/components/multi-page.scss
+++ b/src/scss/components/multi-page.scss
@@ -74,8 +74,8 @@
 }
 
 .multi-card__desc--02 {
-  color: rgba(255, 255, 255, 1);
-  opacity: 0.5;
+  color: #fff;
+  opacity: 0.99;
 }
 
 .multi-card__img {
