--- a/src/scss/components/seller-page.scss
+++ b/src/scss/components/seller-page.scss
@@ -8,6 +8,12 @@
   align-items: center;
 }
 
+@media (max-width: 1600px) {
+  .seller-container {
+    padding: 56px 55px 0px 55px;
+  }
+}
+
 .seller-container {
   padding: 55px 0;
 }
@@ -24,7 +30,7 @@
 }
 
 .product-card {
-  height: 100%;
+  // height: 100%;
   padding-top: 44px;
   background-color: $colorBgProdCard;
   border-radius: 28px;
@@ -39,13 +45,13 @@
   height: 100%;
 }
 
-.product-card__info {
+.product-info {
   width: 100%;
   padding: 8px 32px;
   text-align: center;
 }
 
-.product-card__name h3 {
+.product-info__name h3 {
   font-family: "Be Vietnam Pro";
   font-size: 16px;
   font-style: normal;
@@ -55,7 +61,7 @@
   padding: 3px 0;
 }
 
-.product-card__price h3 {
+.product-info__price {
   font-family: "Be Vietnam Pro";
   font-size: 14px;
   font-style: normal;
@@ -63,7 +69,7 @@
   line-height: 20px;
 }
 
-.produc-card__option {
+.product-option {
   display: flex;
   height: 16px;
   justify-content: center;
@@ -73,26 +79,14 @@
   padding: 24px 0;
 }
 
-.product-option {
+.product-option__item {
   display: flex;
   width: 16px;
   height: 16px;
   align-items: flex-start;
   gap: 4px;
   border-radius: 50%;
-}
-
-.color-1 {
-  background-color: $colorOp1;
-}
-.color-2 {
-  background-color: $colorOp2;
-}
-.color-3 {
-  background-color: $colorOp3;
-}
-.color-4 {
-  background-color: $colorOp3;
+  background-color: var(--color);
 }
 
 .seller__banner {
@@ -114,6 +108,17 @@
   position: absolute;
 }
 
+.btn-sa--large a {
+  display: block;
+  padding: 16px 30.5px;
+  color: var(--Button-Primary-Label, #fff);
+  font-family: "Be Vietnam Pro";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
 @media (max-width: 572px) {
   .seller-container {
     padding-top: 53px;
@@ -127,5 +132,8 @@
     font-weight: 600;
     line-height: 45px;
     letter-spacing: -0.9px;
+  }
+  .product-option {
+    display: none;
   }
 }
