--- a/src/scss/layout/grid.scss
+++ b/src/scss/layout/grid.scss
@@ -31,7 +31,7 @@
   flex-wrap: wrap;
   margin-left: calc($grid-container-gap / -2);
   margin-right: calc($grid-container-gap / -2);
-  height: 100%;
+  // height: 100%;
 }
 
 .col {
